[package]
name = "eloran"
version = "0.2.2"
edition = "2021"
description = "Comics and Ebook web library written in rust, with reading, search, reading status, bookmarks..."
documentation = "https://github.com/thasos/eloran"
repository = "https://github.com/thasos/eloran.git"
keywords = ["webui", "cbz", "epub", "ebook", "comics"]
categories = ["multimedia"]
license-file = "LICENSE.txt"
readme = "README.md"
publish = true

[dependencies]
axum = { version = "0.7", features = ["macros", "http2"] }
# TODO upgrade axum-login when PR#91 will be merged (0.7 ?)
# see https://github.com/maxcountryman/axum-login/pull/91
# axum-login = { git = "https://github.com/maxcountryman/axum-login", rev = "bb7e5d32100bb6846412cee1f26851cc47397991", features = ["sqlite"] }
horrorshow = "0.8.4" # alt : https://github.com/lambda-fairy/maud ?
body = "0.1.1"
env_logger = "0.11"
log = "0.4.17"
# need tower for redirect when not logged in
tower = "0.4.13"
ulid = "1.0.0"
jwalk = "0.8.1"
image = "0.24.5"
epub = "2.0.0"
# TODO remove b64
base64 = "0.22"
compress-tools = "0.15"
# panic on unsafe code of this lib :
# `unsafe precondition(s) violated: slice::from_raw_parts requires the pointer to be aligned and non-null, and the total size of the slice not to exceed `isize::MAX``
# see https://github.com/OSSystems/compress-tools-rs/issues/123
# compress-tools = { git = " https://github.com/OSSystems/compress-tools-rs", rev = "e2af8dafce216f5bf598a34fc7fc73d47e1a2d55" }
libc = "0.2.140"
# clap = { version = "4.1.13", default-features = false, features = ["std"] }
clap = "4.1.13"
config = "0.14"
poppler-rs = "0.23"
cairo-rs = { version = "0.19", features = ["png", "pdf"] }
rand = { version = "0.8", features = ["min_const_gen"] }
urlencoding = "2.1.2"
serde = "1.0.164"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate"] }
tokio = { version = "1.24", features = ["full"] }
argon2 = "0.5.2"
password-auth = "1.0.0"
axum-login = "0.10.2"
async-trait = "0.1.74"
time = "0.3.30"
# async-sqlx-session = { version = "0.4.0", features = ["sqlite"] }

[dev-dependencies]
axum-test-helper = { version = "0.*" }
axum-test = "14.0.0"
insta = { version = "1.34.0", features = ["yaml", "redactions"] }

[profile.release]
panic = 'abort' # No unwinding on panic
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1

[profile.dev.package]
insta.opt-level = 3

[profile.dev]
debug = 0
strip = "debuginfo"
