[package]
name = "eloran"
version = "0.3.1"
edition = "2021"
description = "Comics and Ebook web library written in rust, with reading, search, reading status, bookmarks..."
documentation = "https://github.com/thasos/eloran"
repository = "https://github.com/thasos/eloran.git"
keywords = ["webui", "cbz", "epub", "ebook", "comics"]
categories = ["multimedia"]
license-file = "LICENSE.txt"
readme = "README.md"
publish = true

[dependencies]
axum = { version = "0.8.1", features = ["macros", "http2"] }
axum-login = "0.17.0"
# need tower for redirect when not logged in
tower = { version = "0.5.2", features = ["util"] }
tokio = { version = "1.43.0", features = ["full"] }
horrorshow = "0.8.4" # TODO test alternative : https://github.com/lambda-fairy/maud ?
env_logger = "0.11.6"
log = "0.4.17"
ulid = "1.0.0"
jwalk = "0.8.1"
image = "0.25.5"
epub = "2.0.0"
compress-tools = "0.15.1"
# panic on unsafe code of this lib :
# `unsafe precondition(s) violated: slice::from_raw_parts requires the pointer to be aligned and non-null, and the total size of the slice not to exceed `isize::MAX``
# see https://github.com/OSSystems/compress-tools-rs/issues/123
# compress-tools = { git = " https://github.com/OSSystems/compress-tools-rs", rev = "e2af8dafce216f5bf598a34fc7fc73d47e1a2d55" }
libc = "0.2.170"
config = "0.15.8"
poppler-rs = "0.24.1"
cairo-rs = { version = "0.20.7", features = ["png", "pdf"] }
rand = "0.9.0"
urlencoding = "2.1.2"
serde = "1.0.164"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate"] }
argon2 = "0.5.2"
password-auth = "1.0.0"
async-trait = "0.1.74"
time = { version = "0.3.30", features = ["formatting"] }

[dev-dependencies]
axum-test = "17.2.0"
insta = { version = "1.34.0", features = ["yaml", "redactions"] }

[profile.release]
panic = 'abort' # No unwinding on panic
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1

[profile.dev.package]
insta.opt-level = 3

[profile.dev]
debug = 0
strip = "debuginfo"
